Switch to paperless token authentication

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 PAPERLESS_URL="https://dok.bahuma.io"
-PAPERLESS_USERNAME="admin"
-PAPERLESS_PASSWORD="pass"
+PAPERLESS_TOKEN="abc123"
 
 CUSTOM_FIELD_BETRAG=4
 CUSTOM_FIELD_RECHNUNGSNUMMER=3
